2002-08-22  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (check): Use check-serial, check-threads,
	check-processes.
	(check-serial): New target.
	(check-threads): Likewise.
	(check-processes): Likewise.
	* qm/test/cmdline.py (QMTest.Execute): Return a value.
	(QMTest.GetTargets): Handle errors in the target file more
	gracefully.
	(QMTest.__ExecuteRun): Return a value.
	(QMTest.__ExecuteRemote): Likewise.
	(QMTest.__ExecuteSummarize): Likewise.
	(QMTest.__GetExpectedOutcomes): Always return a valid map.
	* qm/test/qmtest.py: Return a non-zero exit code if there are
	unexpected outcomes.
	* qm/test/resource.py (Resource.arguments): Correct use of hidden
	parameter.
	* qm/test/test.py (Test.arguments): Likewise.
	* qm/test/classes/process_target.py (ProcessTarget.arguments): Fix
	typo in default_value for database_path.
	(ProcessTarget.__init__): Fix
	typo.
	(ProcessTarget.Start): Use "self.processes" not "self.concurrency".
	* qm/test/classes/rsh_target.py (RSHTarget.__init__): Likewise.
	* qm/test/classes/thread_target.py (ThreadTarget.arguments): Fix
	use of default_value.
	(ThreadTarget.__init__): Expect "concurrency" to be a string.
	* qm/test/share/dtml/dir.dtml: Fix grammar in displayed message.
	* qm/test/share/messages/diagnostics.txt: Add message.
	* tests/QMTest/thread_target: New file.
	* tests/QMTest/process_target: New file.
	
2002-08-08  Zack Weinberg  <zack@codesourcery.com>

	Revised test suite.

	* New files:
	tests/QMTest/classes.qmc
	tests/QMTest/selfdb.py
	tests/QMTest/selftest.py
	tests/regress/cycle1/QMTest/configuration
	tests/regress/cycle1/a.qmt
	tests/regress/cycle1/b.qmt
	tests/regress/cycle1/results.qmr
	tests/regress/cycle2/QMTest/configuration
	tests/regress/cycle2/a.qmt
	tests/regress/cycle2/b.qmt
	tests/regress/cycle2/c.qmt
	tests/regress/cycle2/results.qmr
	tests/regress/cycle3/QMTest/configuration
	tests/regress/cycle3/a.qmt
	tests/regress/cycle3/b.qmt
	tests/regress/cycle3/c.qmt
	tests/regress/cycle3/results.qmr