@@ -1,3 +1,10 @@
+2002-08-28  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/test/execution_engine.py (ExecutionEngine._CheckForResponse): 
+	Decrement running here.
+	(ExecutionEngine._AddResult): Not here.
+	(ExecutionEngine._AddUntestedResult): Do not muck with running here.
+
 2002-08-22  Mark Mitchell  <mark@codesourcery.com>
 
 	* GNUmakefile.in (check): Use check-serial, check-threads,
